--- a/public/app/observation/form/dropdown.directive.html
+++ b/public/app/observation/form/dropdown.directive.html
@@ -1,11 +1,22 @@
 <div class="field form-group">
   <label>{{field.title}}</label> <span class="required-error" ng-show="field.required && !field.value">*</span>
 
-  <ui-select ng-model="field.value" theme="bootstrap" ng-required="field.required">
-    <ui-select-match>{{$select.selected.title}}</ui-select-match>
-    <ui-select-choices repeat="choice.title as choice in field.choices | filter: $select.search">
-      <div ng-bind-html="choice.title | highlight: $select.search"></div>
-    </ui-select-choices>
-  </ui-select>
+  <div ng-if="!field.multiselect">
+    <ui-select ng-model="field.value" theme="bootstrap" ng-required="field.required">
+      <ui-select-match>{{$select.selected.title}}</ui-select-match>
+      <ui-select-choices repeat="choice.title as choice in field.choices | filter: $select.search">
+        <div ng-bind-html="choice.title | highlight: $select.search"></div>
+      </ui-select-choices>
+    </ui-select>
+  </div>
+
+  <div ng-if="field.multiselect">
+    <ui-select multiple ng-model="field.value" theme="bootstrap" ng-required="field.required">
+      <ui-select-match>{{$item.title}}</ui-select-match>
+      <ui-select-choices repeat="choice.title as choice in field.choices">
+        <div ng-bind-html="choice.title"></div>
+      </ui-select-choices>
+    </ui-select>
+  </div>
 
 </div>
